--- a/client/src/app/spreadsheet/components/spreadsheet.html
+++ b/client/src/app/spreadsheet/components/spreadsheet.html
@@ -60,7 +60,7 @@
           [style.maxWidth.px]="column.width"
         >
           @if (column.field.required) {
-          <i class="pi pi-asterisk" style="font-size: 6px"></i>
+          <i class="pi pi-asterisk text-red-500" style="font-size: 6px"></i>
           }
           <div
             class="text-sm white-space-nowrap overflow-hidden text-overflow-ellipsis flex-1"
@@ -94,7 +94,7 @@
           [style.maxHeight.px]="elementRef.nativeElement.clientHeight"
         >
           @if (column.field.required) {
-          <i class="pi pi-asterisk" style="font-size: 6px"></i>
+          <i class="pi pi-asterisk text-red-500" style="font-size: 6px"></i>
           }
           <div
             class="text-sm white-space-nowrap overflow-hidden text-overflow-ellipsis flex-1"
@@ -113,7 +113,7 @@
           </div>
         </div>
         @if (column.field.required) {
-        <i class="pi pi-asterisk" style="font-size: 6px"></i>
+        <i class="pi pi-asterisk text-red-500" style="font-size: 6px"></i>
         }
         <div
           class="text-sm white-space-nowrap overflow-hidden text-overflow-ellipsis flex-1"
