refactor: update spreadsheet component templates and styles for improved readability and functionality, add prettier for code formatting

--- a/client/src/app/spreadsheet/components/sub-components/cells/dropdown/cell.html
+++ b/client/src/app/spreadsheet/components/sub-components/cells/dropdown/cell.html
@@ -1,7 +1,8 @@
 @if (selecting) {
-<p-menu #menu [model]="items" appendTo="body" [popup]="true" />
-} @if (data !== undefined && data !== null) {
-<div class="field-cell__block-content">
-  <p-chip [label]="data" [title]="data"></p-chip>
-</div>
+  <p-menu #menu [model]="items" appendTo="body" [popup]="true" />
+}
+@if (data !== undefined && data !== null) {
+  <div class="field-cell__block-content">
+    <p-tag severity="secondary" [value]="data"></p-tag>
+  </div>
 }
