--- a/client/src/app/spreadsheet/components/sub-components/cells/input-box.scss
+++ b/client/src/app/spreadsheet/components/sub-components/cells/input-box.scss
@@ -11,11 +11,8 @@
     &[placeholder] {
       &::before {
         content: attr(placeholder);
-
         display: block;
-
-        color: #b2b2b2;
-
+        color: var(--p-surface-500);
         font-size: 11px;
         font-style: italic;
         font-weight: 400;
@@ -31,7 +28,6 @@
     width: fit-content;
     min-width: 100%;
     max-width: none;
-
     text-align: right;
     white-space: nowrap;
   }
