--- a/client/src/app/spreadsheet/components/spreadsheet.html
+++ b/client/src/app/spreadsheet/components/spreadsheet.html
@@ -73,8 +73,9 @@
           @if (column.field.description?.length) {
             <i
               class="pi pi-info-circle"
-              style="color: #6c757d; font-size: 16px"
+              style="color: var(--p-surface-500); font-size: 12px"
               [pTooltip]="column.field.description"
+              tooltipPosition="bottom"
             ></i>
           }
         </div>
@@ -102,8 +103,9 @@
             @if (column.field.description?.length) {
               <i
                 class="pi pi-info-circle"
-                style="color: #6c757d; font-size: 16px"
+                style="color: var(--p-surface-500); font-size: 12px"
                 [pTooltip]="column.field.description"
+                tooltipPosition="bottom"
               ></i>
             }
           </div>
@@ -120,8 +122,9 @@
         @if (column.field.description?.length) {
           <i
             class="pi pi-info-circle"
-            style="color: #6c757d; font-size: 16px"
+            style="color: var(--p-surface-500); font-size: 12px"
             [pTooltip]="column.field.description"
+            tooltipPosition="bottom"
           ></i>
         }
         @if (config.column.resizable) {
