--- a/client/src/app/spreadsheet/components/spreadsheet.html
+++ b/client/src/app/spreadsheet/components/spreadsheet.html
@@ -236,7 +236,7 @@
               [style.height.px]="groupRect.height"
               [class.group-first-depth]="group.depth === 1"
               [class.group-last-depth]="group.depth === state.groupDepth"
-              [class.group--collapsed]="group.metadata.isCollapsed"
+              [class.group--collapsed]="group.metadata.collapsed"
               [class.box--radius]="group.depth === 1"
             >
               <div class="group__header">
@@ -245,9 +245,7 @@
                     <i
                       class="pi cursor-pointer"
                       style="color: var(--p-surface-500); font-size: 12px"
-                      [ngClass]="
-                        group.metadata.isCollapsed ? 'pi-chevron-right' : 'pi-chevron-down'
-                      "
+                      [ngClass]="group.metadata.collapsed ? 'pi-chevron-right' : 'pi-chevron-down'"
                       (click)="toggleGroup(group)"
                     ></i>
                   </div>
@@ -261,9 +259,7 @@
                     let columnRect = rect
                   "
                 >
-                  <ng-container
-                    *ngIf="columnIndex === 0 && state.frozenIndex >= 0; else notFreezeLeftGroupCell"
-                  >
+                  @if (columnIndex === 0 && state.frozenIndex >= 0) {
                     <div
                       class="group-cell cell"
                       cell-type="group"
@@ -272,10 +268,10 @@
                       [style.minWidth.px]="columnRect.width - config.column.minWidth"
                       [style.maxWidth.px]="columnRect.width - config.column.minWidth"
                     >
-                      @if (group.metadata?.isEmpty) {
+                      @if (group.metadata.empty) {
                         <label>(Empty)</label>
                       } @else {
-                        | {{ group.metadata.data }}
+                        {{ group.metadata.parsed || group.metadata.data }}
                       }
                     </div>
                     <div
@@ -298,8 +294,7 @@
                         ></ng-container>
                       }
                     </div>
-                  </ng-container>
-                  <ng-template #notFreezeLeftGroupCell>
+                  } @else {
                     <div
                       class="group-cell cell"
                       cell-type="group"
@@ -320,7 +315,7 @@
                         ></ng-container>
                       }
                     </div>
-                  </ng-template>
+                  }
                 </ng-container>
               </div>
               @if (!group.children) {
@@ -596,7 +591,7 @@
               [style.height.px]="groupRect.height"
               [class.group-first-depth]="group.depth === 1"
               [class.group-last-depth]="group.depth === state.groupDepth"
-              [class.group--collapsed]="group.metadata.isCollapsed"
+              [class.group--collapsed]="group.metadata.collapsed"
               [class.box--radius]="group.depth === 1"
             >
               <div class="group__header">
